syntax = "proto3";

package ldap_service;

import "structs/user.proto";

message GetUsersRequest {
  repeated string uids = 1;
}

message GetUsersResponse {
  repeated structs.User users = 1;
}

message AuthUserRequest {
  string uid = 1;
  string password = 2;
}

message AuthUserResponse {
  bool valid = 1;
  optional structs.User user = 2;
}

service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc Auth(AuthUserRequest) returns (AuthUserResponse);
}